src/test/test-models/bad/err-no-cond-else-if.stan
transformed data {
  real x;
  if (1) {
    x <- 2;
  } else if {
    x <- 3;
  }
}
model {
}
